# Resume-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  skills-lock.json
.agents/skills/browser-use-agent/: SKILL.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/api/: __init__.py
apps/api/app/api/routes/: __init__.py  health.py  sessions.py  vault.py
apps/api/app/db/: __init__.py  models.py  session.py
apps/api/app/llm/: __init__.py  openai_client.py
apps/api/app/orchestration/: __init__.py  blueprint.py  capabilities.py  context_budget.py  contracts.py  drafting.py  evaluation.py  interrogation.py  paper_design.py  research.py  runtime.py
apps/api/app/vault/: __init__.py  contracts.py  indexing.py  ingestion.py  retrieval.py  safety.py  service.py
apps/web/: .gitignore  package.json
docs/architecture/: foundation-contracts.md
docs/developer/: agent-capabilities.md  environment.md  local-setup.md  onboarding.md
docs/operations/: deployment.md  gsd-workflow.md  release-checklist.md
docs/plans/: 2026-04-05-hardening-runtime-routing-design.md
fixtures/evaluation/: backend-platform-session.json
fixtures/papers/: agent-routing-paper.json
scripts/: agent_capabilities.json  bootstrap_agent_capabilities.py  paper_to_design_helper.py  replay_session_evaluation.py  verify_agent_capabilities.py
(+132 files in other folders)
