[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "resume-agent-api"
version = "0.1.0"
description = "FastAPI backend for Resume Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.135.3,<0.136.0",
  "uvicorn>=0.43.0,<0.44.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "httpx>=0.28.0,<0.29.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
