[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "resume-agent-api"
version = "0.1.0"
description = "FastAPI backend for Resume Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "chromadb>=1.2.0,<2.0.0",
  "fastapi>=0.135.3,<0.136.0",
  "pydantic-settings>=2.13.1,<3.0.0",
  "psycopg[binary]>=3.3.3,<4.0.0",
  "sqlalchemy>=2.0.49,<2.1.0",
  "uvicorn>=0.43.0,<0.44.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "httpx>=0.28.0,<0.29.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
